src/test/resources/testData/annotator/annotator.spj
[abv]

perform <error descr="Undefined Procedure">abc</error>()